versioned_docs/version-2026.1.1/professor/roberto_haruyoshi_ito.mdx
---
sidebar_label: 'Roberto Haruyoshi Ito'
---

import { Grid } from "@site/src/components/Grid";
import BrowserOnly from "@docusaurus/BrowserOnly";

export const data = {
  "title": "Roberto Haruyoshi Ito",
  "base": "",
  "weekClasses": [
    {
      "dayName": "Segunda-Feira",
      "dayClasses": [
        {
          "subject": "Agroindustrialização de Produtos de Origem Vegetal e Animal (APOVA) - 1094",
          "size": 2,
          "teachers": [
            "Roberto Haruyoshi Ito",
            "Indefinido 1"
          ],
          "classroom": "sala_7-2",
          "students": [
            "AGO2024"
          ],
          "time": "07:30 - 08:20",
          "color": ""
        },
        {
          "subject": "Planejamento Agropecuário - 2215",
          "size": 2,
          "teachers": [
            "Roberto Haruyoshi Ito"
          ],
          "classroom": "sala_7-2",
          "students": [
            "AGR2025"
          ],
          "time": "19:00 - 19:50",
          "color": ""
        }
      ]
    },
    {
      "dayName": "Terça-Feira",
      "dayClasses": [
        {
          "subject": "Meteorologia e Bioclimatologia na Agropecuária - 631",
          "size": 2,
          "teachers": [
            "Roberto Haruyoshi Ito"
          ],
          "classroom": "sala_12-2",
          "students": [
            "AGO2025"
          ],
          "time": "09:25 - 10:15",
          "color": ""
        },
        {
          "subject": "Produção Animal I - 628",
          "size": 2,
          "teachers": [
            "Roberto Haruyoshi Ito"
          ],
          "classroom": "sala_12-2",
          "students": [
            "AGO2025"
          ],
          "time": "13:10 - 14:00",
          "color": ""
        }
      ]
    },
    {
      "dayName": "Quarta-Feira",
      "dayClasses": []
    },
    {
      "dayName": "Quinta-Feira",
      "dayClasses": [
        {
          "subject": "Produção Animal I - 628",
          "size": 1,
          "teachers": [
            "Roberto Haruyoshi Ito"
          ],
          "classroom": "sala_12-2",
          "students": [
            "AGO2025"
          ],
          "time": "15:05 - 15:55",
          "color": ""
        },
        {
          "subject": "PRODUÇÃO ANIMAL I (492)",
          "size": 1,
          "teachers": [
            "Roberto Haruyoshi Ito"
          ],
          "classroom": "a_definir",
          "students": [
            "AGO2024-DP"
          ],
          "time": "15:55 - 16:45",
          "color": ""
        },
        {
          "subject": "Produção Animal II",
          "size": 1,
          "teachers": [
            "Roberto Haruyoshi Ito"
          ],
          "classroom": "a_definir",
          "students": [
            "AGO2021-DP"
          ],
          "time": "15:55 - 16:45",
          "color": ""
        },
        {
          "subject": "PRODUÇÃO ANIMAL I (492)",
          "size": 1,
          "teachers": [
            "Roberto Haruyoshi Ito"
          ],
          "classroom": "a_definir",
          "students": [
            "AGO2024-DP"
          ],
          "time": "16:45 - 17:35",
          "color": ""
        },
        {
          "subject": "Produção Animal II",
          "size": 1,
          "teachers": [
            "Roberto Haruyoshi Ito"
          ],
          "classroom": "a_definir",
          "students": [
            "AGO2021-DP"
          ],
          "time": "16:45 - 17:35",
          "color": ""
        },
        {
          "subject": "Bovinocultura de Corte - 2208",
          "size": 4,
          "teachers": [
            "Roberto Haruyoshi Ito"
          ],
          "classroom": "sala_7-2",
          "students": [
            "AGR2025"
          ],
          "time": "19:00 - 19:50",
          "color": ""
        }
      ]
    },
    {
      "dayName": "Sexta-Feira",
      "dayClasses": []
    }
  ],
  "time": [
    {
      "time": "07:30 - 08:20",
      "size": 50
    },
    {
      "time": "08:20 - 09:10",
      "size": 50
    },
    {
      "time": "09:25 - 10:15",
      "size": 50
    },
    {
      "time": "10:15 - 11:05",
      "size": 50
    },
    {
      "time": "11:05 - 11:55",
      "size": 50
    },
    {
      "time": "13:10 - 14:00",
      "size": 50
    },
    {
      "time": "14:00 - 14:50",
      "size": 50
    },
    {
      "time": "15:05 - 15:55",
      "size": 50
    },
    {
      "time": "15:55 - 16:45",
      "size": 50
    },
    {
      "time": "16:45 - 17:35",
      "size": 50
    },
    {
      "time": "19:00 - 19:50",
      "size": 50
    },
    {
      "time": "19:50 - 20:40",
      "size": 50
    },
    {
      "time": "21:00 - 21:50",
      "size": 50
    },
    {
      "time": "21:50 - 22:40",
      "size": 50
    }
  ]
}

# Roberto Haruyoshi Ito

<div>
  {
    <BrowserOnly>
      {() => (
        <Grid
          title={data.title}
          weekClasses={data.weekClasses}
          time={data.time}
        />
      )}
    </BrowserOnly>
  }
</div>

